--- a/App.xaml
+++ b/App.xaml
@@ -8,6 +8,7 @@
 
             <ResourceDictionary.MergedDictionaries>
 
+                <ResourceDictionary Source="Styles/AddButton.xaml" />
                 <ResourceDictionary Source="Styles/Colors.xaml" />
                 <ResourceDictionary Source="Styles/MenuButton.xaml" />
                 <ResourceDictionary Source="Styles/MenuButtonText.xaml" />
