--- a/App.xaml
+++ b/App.xaml
@@ -1,15 +1,16 @@
 ﻿<Application x:Class="WPFDeskManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFDeskManager"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        
         <ResourceDictionary>
 
             <ResourceDictionary.MergedDictionaries>
 
                 <ResourceDictionary Source="Styles/AddButton.xaml" />
                 <ResourceDictionary Source="Styles/Colors.xaml" />
+                <ResourceDictionary Source="Styles/DefaultDataViewStyle.xaml" />
                 <ResourceDictionary Source="Styles/MenuButton.xaml" />
                 <ResourceDictionary Source="Styles/MenuButtonText.xaml" />
                 <ResourceDictionary Source="Styles/TableButtons.xaml" />
