--- a/Views/Desks.xaml
+++ b/Views/Desks.xaml
@@ -6,93 +6,29 @@
              xmlns:vm="clr-namespace:WPFDeskManager.ViewModels" 
              xmlns:u="clr-namespace:WPFDeskManager.Utilities"
              mc:Ignorable="d" 
-             d:DesignHeight="583" d:DesignWidth="810">
+             d:DesignHeight="633" d:DesignWidth="810">
 
     <UserControl.DataContext>
         <vm:DesksVM/>
     </UserControl.DataContext>
+    
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="VisibilityConverter"/>
         <u:InverseBooleanToVisibilityConverter x:Key="InverseVisibilityConverter"/>
-    </UserControl.Resources>
+        
+        <DataTemplate x:Key="Table">
+            
+            <DataGrid 
+                    ItemsSource="{Binding Desks}"
+                    Style="{StaticResource TableGridStyle}"
+                    ColumnHeaderStyle="{StaticResource TableColumnHeaderStyle}"
+                    RowStyle="{StaticResource TableRowStyle}" 
+                    CellStyle="{StaticResource TableCellStyle}"
+                    Visibility="{Binding IsLoading, Converter={StaticResource InverseVisibilityConverter}}">
 
-    <Grid>
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="463"/>
-        </Grid.RowDefinitions>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="230"/>
-        </Grid.ColumnDefinitions>
-
-        <Border Grid.RowSpan="3" Grid.ColumnSpan="2">
-            <Border.Background>
-                <SolidColorBrush 
-                    Color="{StaticResource BGMainColor}" />
-            </Border.Background>
-        </Border>
-
-        <!--#region Title-->
-
-        <Grid 
-              Grid.Column="0" 
-              HorizontalAlignment="Left" 
-              VerticalAlignment="Center">
-
-            <Label Content="{Binding PageTitle}" Margin="20,0,0,0" FontSize="20"/>
-
-        </Grid>
-
-        <!--#endregion-->
-
-        <!--#region Add Button-->
-
-        <Grid 
-            Grid.Column="1" 
-            HorizontalAlignment="Right" 
-            Margin="0,0,30,0"
-            VerticalAlignment="Center">
-
-            <Button Content="DODAJ BIURKO" 
-                    Style="{StaticResource AddBtnStyle}" />
-
-        </Grid>
-
-        <!--#endregion-->
-
-        <!--#region Loading circle -->
-
-        <Grid 
-            Grid.Row="2" 
-            HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            Width="64" 
-            Height="64" 
-            Margin="373,108,0,0">
-            <u:LoadingControll 
-                Visibility="{Binding IsLoading, Converter={StaticResource VisibilityConverter}}"
-                />
-        </Grid>
-
-        <!--#endregion-->
-
-        <!--#region Desk List-->
-
-        <Grid Grid.Row="2" Grid.ColumnSpan="2">
-
-            <DataGrid Name="DeskList" 
-                      ItemsSource="{Binding Desks}"
-                      Style="{StaticResource TableGridStyle}"
-                      ColumnHeaderStyle="{StaticResource TableColumnHeaderStyle}"
-                      RowStyle="{StaticResource TableRowStyle}" 
-                      CellStyle="{StaticResource TableCellStyle}"
-                      Visibility="{Binding IsLoading, Converter={StaticResource InverseVisibilityConverter}}"
-                      >
-
+                <DataGrid.DataContext>
+                    <vm:DesksVM/>
+                </DataGrid.DataContext>
+                
                 <DataGrid.Resources>
                     <Style TargetType="DataGridRowHeader">
                         <Setter Property="Template">
@@ -103,38 +39,46 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
-
                 </DataGrid.Resources>
+                
 
                 <DataGrid.Columns>
                     <DataGridTextColumn  
-                        Binding ="{Binding Id}" 
-                        Header="ID" 
-                        Width="*" 
-                        IsReadOnly="True"                        
-                        />
+                Binding ="{Binding Id}" 
+                Header="ID" 
+                Width="*" 
+                IsReadOnly="True"/>
                     <DataGridTextColumn Binding ="{Binding Name}" Header="Nazwa" Width="*" IsReadOnly="True"/>
                     <DataGridTextColumn Binding ="{Binding RoomName}" Header="Pokój" Width="*" IsReadOnly="True"/>
                     <DataGridTextColumn Binding ="{Binding StatusName}" Header="Status" Width="*" IsReadOnly="True"/>
-                    <DataGridTemplateColumn   Header="" Width="Auto">
+                    <DataGridTemplateColumn Header="" Width="Auto">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-
                                     <Button Style="{StaticResource ShowButtonStyle}"/>
                                     <Button Style="{StaticResource EditButtonStyle}"/>
                                     <Button Style="{StaticResource DeleteButtonStyle}"/>
-
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
+        </DataTemplate>
+    </UserControl.Resources>
 
-        </Grid>
 
-        <!--#endregion-->
+    <Grid>
+
+        <u:DefaultDataView 
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            ViewTitle="{Binding PageTitle}" 
+            AddButtonText="{Binding AddButtonContent}" 
+            IsLoading="{Binding IsLoading}"
+            Content="{StaticResource Table}"
+            >
+        </u:DefaultDataView>
 
     </Grid>
 </UserControl>
