Added add desk window

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,6 +12,7 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="SingleBorderWindow"
         ResizeMode="CanMinimize"
+        Name="mainwindow"
         >
 
     <!--#region Data Context-->
