--- a/Utilities/DataTemplate.xaml
+++ b/Utilities/DataTemplate.xaml
@@ -16,4 +16,8 @@
         <view:Desks />
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:AddDeskVM}">
+        <view:AddDesk />
+    </DataTemplate>
+
 </ResourceDictionary>
