--- a/App.xaml
+++ b/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Styles/MenuButtonText.xaml" />
                 <ResourceDictionary Source="Styles/TableButtons.xaml" />
                 <ResourceDictionary Source="Styles/TableGridStyle.xaml" />
+                <ResourceDictionary Source="Styles/EntityWindow.xaml" />
                 <ResourceDictionary Source="Utilities/DataTemplate.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
