--- a/Views/Desks.xaml
+++ b/Views/Desks.xaml
@@ -56,9 +56,18 @@
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <Button Style="{StaticResource ShowButtonStyle}"/>
-                                    <Button Style="{StaticResource EditButtonStyle}"/>
-                                    <Button Style="{StaticResource DeleteButtonStyle}"/>
+                                    <Button 
+                                        Style="{StaticResource ShowButtonStyle}" 
+                                        Command="{Binding DataContext.ShowCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
+                                        CommandParameter="{Binding Id}"/>
+                                    <Button 
+                                        Style="{StaticResource EditButtonStyle}"
+                                        Command="{Binding DataContext.EditCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
+                                        CommandParameter="{Binding Id}"/>
+                                    <Button 
+                                        Style="{StaticResource DeleteButtonStyle}"
+                                        Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
+                                        CommandParameter="{Binding Id}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
