Added delete entity window

--- a/Utilities/DataTemplate.xaml
+++ b/Utilities/DataTemplate.xaml
@@ -23,5 +23,9 @@
     <DataTemplate DataType="{x:Type vm:ShowDeskVM}">
         <view:ShowDesk />
     </DataTemplate>
+    
+    <DataTemplate DataType="{x:Type vm:DeleteEntityVM}">
+        <view:DeleteEntity />
+    </DataTemplate>
 
 </ResourceDictionary>
