--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="WPFDeskManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:uc="clr-namespace:WPFDeskManager.Utilities"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
+
         <ResourceDictionary>
 
             <ResourceDictionary.MergedDictionaries>
