--- a/Styles/DefaultDataViewStyle.xaml
+++ b/Styles/DefaultDataViewStyle.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:u="clr-namespace:WPFDeskManager.Utilities"
-                    >
+                    xmlns:u="clr-namespace:WPFDeskManager.Utilities" 
+                    xmlns:uc="clr-namespace:WPFDeskManager.Utilities.Converters">
     <Style TargetType="{x:Type u:DefaultDataView}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type u:DefaultDataView}">
                     <ControlTemplate.Resources>
                         <BooleanToVisibilityConverter x:Key="VisibilityConverter"/>
-                        <u:InverseBooleanToVisibilityConverter x:Key="InverseVisibilityConverter"/>
+                        <uc:InverseBooleanToVisibilityConverter x:Key="InverseVisibilityConverter"/>
                     </ControlTemplate.Resources>
 
                     <Grid>
