--- a/Utilities/LoadingControll.xaml
+++ b/Utilities/LoadingControll.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="64" d:DesignWidth="64">
     <Grid>
         <Image
-            Source="/Assets/Loading.png"            
+            Source="/Assets/Images/Loading.png"            
             RenderTransformOrigin="0.5, 0.5">
             <Image.RenderTransform>
                 <RotateTransform x:Name="noFreeze" />
