--- a/Views/DeleteEntity.xaml
+++ b/Views/DeleteEntity.xaml
@@ -7,7 +7,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFDeskManager.Views" 
         xmlns:vm="clr-namespace:WPFDeskManager.ViewModels" 
-        xmlns:u="clr-namespace:WPFDeskManager.Utilities"
+        xmlns:u="clr-namespace:WPFDeskManager.Utilities" 
+        xmlns:uc="clr-namespace:WPFDeskManager.Utilities.Converters"
         mc:Ignorable="d"
         Title="Delete" Height="250" Width="500">
 
@@ -16,7 +17,7 @@
     </Window.DataContext>
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="VisibilityConverter"/>
-        <u:InverseBooleanToVisibilityConverter x:Key="InverseVisibilityConverter"/>
+        <uc:InverseBooleanToVisibilityConverter x:Key="InverseVisibilityConverter"/>
     </Window.Resources>
 
     <Grid>
